Added readme, requirements.txt and updated the help provided by argparse to show the options available for each argument.